# binarn

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml
binarn/: __init__.py
tests/: test_binarn.py  test_spia.py  test_z.py
z/: __init__.py
